Added city list to Elastic

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "bot_token":"454626759:AAFlHdJvgCo6M-TECOUZK7ydqi637LKh0E4",
   "chat_default_location":"chatslocation.json",
-  "elastic_address":"http://elastic:9200"
+  "elastic_address":"http://elastic:9200",
+  "locations_code_file_name":"city.list.json"
 }
