--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - "9200:9200"
       - "9300:9300"
     environment:
-      - ES_JAVA_OPTS=-XX:-AssumeMP
+      - ES_JAVA_OPTS= -XX:ParallelGCThreads=1
     networks:
       kitler:
         aliases:
